--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
-body {
-    background: rgb(68, 65, 65);
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.webgl {
+    position: fixed;
+    top: 0;
+    left: 0;
+    outline: none;
 }
